--- a/Zhealthcare.Service/Zhealthcare.Service.csproj
+++ b/Zhealthcare.Service/Zhealthcare.Service.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 	<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
