--- a/Zhealthcare.Utility/Zhealthcare.Utility.csproj
+++ b/Zhealthcare.Utility/Zhealthcare.Utility.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <None Remove="appsettings.json" />
     <None Remove="Data\CaseManagementCensus.json" />
+    <None Remove="Data\contract.json" />
     <None Remove="Data\Lookups\apr-drg.json" />
     <None Remove="Data\Lookups\MSDRGInfo.json" />
     <None Remove="Data\Lookups\query diagnosis.json" />
@@ -22,6 +23,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\CaseManagementCensus.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\contract.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\Lookups\apr-drg.json">
