Implemented Azure ad based authentication

--- a/Zhealthcare.Service/appsettings.json
+++ b/Zhealthcare.Service/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AzureAd": {
+    "Audience": "9e11a7a0-8ceb-4b31-a905-1a979b097247",
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "ZHCSinc.com",
+    "TenantId": "ed1842b4-e4ca-4da6-8587-1f81a3cffa8f",
+    "ClientId": "9e11a7a0-8ceb-4b31-a905-1a979b097247",
+    "Scopes": {
+      "Read": [ "patients.read", "resource.patient" ],
+      "Write": [ "patients.read" ]
+    },
+    "AppPermissions": {
+      "Read": [ "patients.crud" ],
+      "Write": [ "patients.crud" ]
+    }
+  }
 }
