--- a/Zhealthcare.Service/Zhealthcare.Service.csproj
+++ b/Zhealthcare.Service/Zhealthcare.Service.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Ardalis.Specification" Version="6.1.0" />
     <PackageReference Include="Mapster" Version="7.3.0" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="2.12.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 	<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
