reading client Id from the app settings

--- a/Zhealthcare.Service/appsettings.json
+++ b/Zhealthcare.Service/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "AzureAd": {
-    "Audience": "9e11a7a0-8ceb-4b31-a905-1a979b097247",
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "ZHCSinc.com",
     "TenantId": "ed1842b4-e4ca-4da6-8587-1f81a3cffa8f",
@@ -16,6 +15,7 @@
       "Read": [ "patients.read", "resource.patient" ],
       "Write": [ "patients.read" ]
     },
+    "AllowedClientId": "ccdf8d9f-bd27-49d3-8239-8f37dcaeae99",
     "AppPermissions": {
       "Read": [ "patients.crud" ],
       "Write": [ "patients.crud" ]
