--- a/Zhealthcare.Service/Zhealthcare.Service.csproj
+++ b/Zhealthcare.Service/Zhealthcare.Service.csproj
@@ -26,4 +26,10 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="Data\contract.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
 </Project>
