--- a/Zhealthcare.Service/appsettings.Development.json
+++ b/Zhealthcare.Service/appsettings.Development.json
@@ -5,7 +5,7 @@
     "Connections": {
       "Patients": {
         "DatabaseName": "z-healthcare",
-        "CollectionName": "Patients-temp"
+        "CollectionName": "Patients"
       },
       "Lookups": {
         "DatabaseName": "z-healthcare",
