--- a/Zhealthcare.Service/appsettings.Production.json
+++ b/Zhealthcare.Service/appsettings.Production.json
@@ -5,7 +5,7 @@
     "Connections": {
       "Patients": {
         "DatabaseName": "cds",
-        "CollectionName": "patients"
+        "CollectionName": "patients-demo"
       },
       "Lookups": {
         "DatabaseName": "cds",
