--- a/.github/workflows/abzcds.yml
+++ b/.github/workflows/abzcds.yml
@@ -53,5 +53,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.zcds_FE84 }}
+        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D2386B7947A0436794D1A3517770D541 }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
