--- a/.github/workflows/abzcds.yml
+++ b/.github/workflows/abzcds.yml
@@ -13,8 +13,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-  
+    - uses: actions/checkout@v
+    
+    - name: Clean artifacts
+      run: |
+        # Remove existing artifacts
+        rm -rf ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v3
       with:
