--- a/.github/workflows/abzcds.yml
+++ b/.github/workflows/abzcds.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v
+    - uses: actions/checkout@v3
     
     - name: Clean artifacts
       run: |
